# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,10 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import groceriesRouter from "./groceries";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(groceriesRouter);
 
 export default router;
